# GPTifier

./: .gitignore  .gptifier  Makefile  README.md  get_dependencies  get_deps.sh  install.py  pull_request_template.md  pytest.ini  setup  template.py
.gptifier/: README.txt  gptifier.toml
GPTifier/: CMakeLists.txt
GPTifier/include/: api.hpp  api_openai_admin.hpp  api_openai_user.hpp  cli.hpp  command_embed.hpp  command_models.hpp  command_run.hpp  command_short.hpp  commands.hpp  configs.hpp  curl_base.hpp  curl_connector.hpp  data.hpp  datadir.hpp  help_messages.hpp  input_selection.hpp  models.hpp  openai_admin.hpp  params.hpp  parsers.hpp  prompts.hpp  query.hpp  reporting.hpp  request_bodies.hpp  requests.hpp  responses.hpp  selectors.hpp  testing.hpp  utils.hpp  validation.hpp
GPTifier/include/api_calls/: run_completion.hpp
GPTifier/include/interface/: command_embed.hpp  command_short.hpp  help_messages.hpp  params.hpp
GPTifier/include/serialization/: chat_completions.hpp  files.hpp  fine_tuning.hpp  models.hpp  parse_response.hpp  validation.hpp
GPTifier/src/: api.cpp  api_openai_admin.cpp  api_openai_user.cpp  cli.cpp  command_chats.cpp  command_costs.cpp  command_embed.cpp  command_files.cpp  command_fine_tune.cpp  command_models.cpp  command_run.cpp  command_short.cpp  command_test.cpp  commands.cpp  configs.cpp  configs.hpp  curl_base.cpp  curl_connector.cpp  data_dir.cpp  datadir.cpp  help_messages.cpp  input_selection.cpp  main.cpp  models.cpp  openai_admin.cpp  params.cpp  parsers.cpp  prompts.cpp  query.cpp  reporting.cpp  request_bodies.cpp  requests.cpp  responses.cpp  run_completion.cpp  selectors.cpp  testing.cpp  utils.cpp  utils.hpp  validation.cpp  value_objects.cpp
GPTifier/src/api_calls/: run_completion.cpp
GPTifier/src/commands/: command_chats.cpp  command_chats.hpp  command_costs.cpp  command_costs.hpp  command_edit.cpp  command_edit.hpp  command_embed.cpp  command_embed.hpp  command_files.cpp  command_files.hpp  command_fine_tune.cpp  command_fine_tune.hpp  command_img.cpp  command_img.hpp  command_models.cpp  command_run.cpp  command_run_chat_completions.cpp  command_run_chat_completions.hpp  command_short.cpp  command_short.hpp  command_test.cpp  command_test.hpp  help_messages.cpp  help_messages.hpp
GPTifier/src/interface/: Inputfile  command_chats.cpp  command_costs.cpp  command_edit.cpp  command_embed.cpp  command_files.cpp  command_fine_tune.cpp  command_models.cpp  command_run.cpp  command_short.cpp  command_test.cpp  help_messages.cpp  help_messages.hpp  model_selector.cpp  params.cpp
GPTifier/src/networking/: api_ollama.cpp  api_ollama.hpp  api_openai_admin.cpp  api_openai_admin.hpp  api_openai_user.cpp  api_openai_user.hpp  curl_.cpp  curl_.hpp  curl_base.cpp  curl_base.hpp
GPTifier/src/serialization/: chat_completions.cpp  chat_completions.hpp  costs.cpp  costs.hpp  embeddings.cpp  embeddings.hpp  files.cpp  files.hpp  fine_tuning.cpp  fine_tuning.hpp  images.cpp  images.hpp  models.cpp  models.hpp  ollama_generate.cpp  ollama_generate.hpp  parse_response.cpp  response_to_json.cpp  response_to_json.hpp  responses.cpp  responses.hpp  ser_utils.cpp  ser_utils.hpp  testing.cpp  testing.hpp  validation.cpp
src/: CMakeLists.txt  cli.cpp  cli.h  cli.hpp  configs.cpp  configs.h  configs.hpp  data.h  data.hpp  main.cpp  presentation.cpp  presentation.h  prompts.cpp  prompts.h  prompts.hpp  query.cpp  query.h  query.hpp  requests.cpp  requests.h  requests.hpp  response.cpp  response.h  responses.cpp  responses.h  responses.hpp  typedefs.h  utils.cpp  utils.h  utils.hpp
src/commands/: CMakeLists.txt  command_chats.cpp  command_chats.hpp  command_costs.cpp  command_costs.hpp  command_edit.cpp  command_edit.hpp  command_embed.cpp  command_embed.hpp  command_files.cpp  command_files.hpp  command_fine_tune.cpp  command_fine_tune.hpp  command_models.cpp  command_models.hpp  command_run.cpp  command_run.hpp  command_short.cpp  command_short.hpp  command_test.cpp  command_test.hpp
src/interface/: CMakeLists.txt  command_costs.cpp  command_costs.hpp  command_edit.cpp  command_edit.hpp  command_files.cpp  command_files.hpp  command_fine_tune.cpp  command_fine_tune.hpp  command_models.cpp  command_run.cpp  command_run.hpp  command_test.cpp
src/networking/: CMakeLists.txt  api_openai_admin.cpp  api_openai_admin.hpp  api_openai_user.hpp
src/serialization/: CMakeLists.txt  chat_completions.cpp  costs.cpp  costs.hpp  embeddings.hpp  files.cpp  fine_tuning.cpp  fine_tuning.hpp  models.cpp  response_to_json.cpp  response_to_json.hpp  testing.cpp
tests/: .pylintrc  conftest.py  consts.py  dummy.py  extended_testcase.py  helpers.py  prompt_basic.txt  test.py  test_binary.py  test_chat_completion.py  test_chat_completion_memory.py  test_chats.py  test_client_reusability.py  test_costs.py  test_edit.py  test_embed.py  test_files.py  test_fine_tune.py  test_img.py  test_memory.py  test_misc.py  test_models.py  test_run.py  test_short.py  test_version.py  utils.py
tests/test_edit/: dummy.py  prompt.txt
tests/test_embed/: lorem.txt
tests/test_files/: dummy.jsonl
